@@ -1,4 +1,4 @@
 {
     "chat.commands.reply": "Ответить",
-    "chat.reply.recipient": "Ответить %s"
+    "chat.reply.recipient": "Ответить %s:"
 }
