@@ -1,3 +1,4 @@
 - Fixed localisation for stickers
 - Utilised the new functionality for reply messages
 - Fixed the delete button not changing its image after executing the deletion
+- Added an ability to replace the drawn name with message.displayName
